home.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
@import url(//fonts.googleapis.com/earlyaccess/nicomoji.css);
@import url(//fonts.googleapis.com/earlyaccess/nikukyu.css);
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Pacifico&family=Zen+Maru+Gothic:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Quicksand:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500;1,700&display=swap');
@import url('https://fonts.cdnfonts.com/css/futura-pt');


/* root tags */
:root{
	--main-color: #16181c;
	--alt-color: #dbd06a;
  --diff-color: #594974;
  --sub-text: #a6aaad;
}


body {
	margin: 0;
	padding: 0;
	font-family: 'Montserrat', sans-serif;
  /* background-color: var(--main-color); */
}

html, body{
	width: 100%;
	height: 100%;
	scroll-behavior: smooth;
  background: url(./images/bg-1.png) no-repeat center center fixed;
  background-size: cover;
}


/* -------------------------------------   SCROLLBAR  --------------------------------------*/
::-webkit-scrollbar {
  width: 4px; 
}

::-webkit-scrollbar-track {
  background-color: var(--main-color);
}

::-webkit-scrollbar-thumb {
  background-color: var(--alt-color);
}

/* -------------------------------------   navbar --------------------------------------*/


/* -------------------------------------   First section (title) --------------------------------------*/
.section1 {
  /* background-color: #16181c; */
  color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
	height: 100%;
	cursor: none;
  /* background-image: url(./images/bg-1.png); */
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.section1-content {
  text-align: center;
  margin-bottom: 20px;
  position: relative;
}

.section1 h1 {
  margin: 0;
	font-size: 90px;
	letter-spacing: 3px;
	font-weight: 800;
}

.section1 .subtitle {
  font-size: 19px;
  color: #f0efef;
  text-align: left;
  margin-left: 5px;
	width: 80%;
	white-space: nowrap;
	font-weight: 500;
	height: 30%;
  color: var(--sub-text);
  letter-spacing: 2px;
}

.subtitle-underscore {
  position: absolute;
  bottom: 0;
  left: 2px;
  width: calc(10% - 10px);
  height: 2px;
  background-color: var(--alt-color);
  margin-left: 5px;
  animation: drawUnderscore 0.7s ease-out forwards;
  -webkit-animation: drawUnderscore 0.7s ease-out forwards;
}

@keyframes drawUnderscore{
  0%{
    width: 0;
  }
  100%{
    width: calc(10% - 10px);
  }
}

.cursor{
	position: fixed;
	width: 35px;
	height: 35px;
	margin-left: -20px;
	margin-top: -20px;
	border-radius: 50%;
	border: 2px solid var(--alt-color);
	transition: transform .3s ease;
	transform-origin: center center;
	pointer-events: none;
	z-index: 1000;
	display: block;
}

.grow, .grow-small{
	transform: scale(5);
	background: #fff;
	mix-blend-mode: difference;
	border: none;
	-webkit-transform: scale(5);
	-moz-transform: scale(5);
	-ms-transform: scale(5);
	-o-transform: scale(5);
}
.grow-small{
	transform: scale(2.5);
	-webkit-transform: scale(2.5);
	-moz-transform: scale(2.5);
	-ms-transform: scale(2.5);
	-o-transform: scale(2.5);
}

.quote-template {
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  text-align: center;
	white-space: nowrap;
}

.quote-text {
  font-size: 18px;
  color: #fff;
}

.jap-text{
	font-family: 'Nikukyu', cursive;
	font-weight: 500; 
	color: var(--alt-color);
	letter-spacing: 8px;
}

#scroll-down-animation {
  position: absolute;
  top: 75%;
  left: 50%;
  transform: translate(-50%,-50%);
  opacity: 0;
  animation: fade-in-mouse 1s ease-in-out 1.25s forwards;
  -webkit-animation: fade-in-mouse 1s ease-in-out 1.25s forwards;
  -moz-animation: fade-in-mouse 1s ease-in-out 1.25s forwards;
  -o-animation: fade-in-mouse 1s ease-in-out 1.25s forwards;
  width: 30%;
  height: 10%;
  align-items: center;
  justify-content: center;
}

@keyframes fade-in-mouse {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

#scroll-down-animation h2 {
  color: var(--sub-text);
  font-weight: 400;
  font-size: 15px;
  white-space: nowrap;
  text-align: center;
  width: 100%;
}

.mouse {
  margin: 0 auto;
  display: block;
  border-radius: 50px;
  border: 2px solid #fff;
  height: 60px;
  width: 30px;
  position: relative;
}

.move {
  position: absolute;
  background-color: var(--alt-color);
  height: 10px;
  width: 10px;
  border-radius: 50%;
  left: 50%;
  transform: translateX(-50%);
  animation: move 2s linear infinite;
}

@keyframes move {
    0% {
      transform: translate(-50%,5px);
      opacity: 0;
      -webkit-transform: translate(-50%,5px);
      -moz-transform: translate(-50%,5px);
      -ms-transform: translate(-50%,5px);
      -o-transform: translate(-50%,5px);
  }
    50% {
      transform: translate(-50%,25px);
      opacity: 1;
      -webkit-transform: translate(-50%,25px);
      -moz-transform: translate(-50%,25px);
      -ms-transform: translate(-50%,25px);
      -o-transform: translate(-50%,25px);
  }
    100% {
      transform: translate(-50%,45px);
      opacity: 0;
      -webkit-transform: translate(-50%,45px);
      -moz-transform: translate(-50%,45px);
      -ms-transform: translate(-50%,45px);
      -o-transform: translate(-50%,45px);
  }
}
/* ... */

